Home-Assistant/Kubernetes/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
  namespace: homeassistant
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.ha.yourdomain.co.uk`)
      kind: Rule
      services:
        - name: homeassistant
          port: 80
    - match: Host(`ha.yourdomain.co.uk`)
      kind: Rule
      services:
        - name: homeassistant
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: yourdomain-tls
